RESOLVED FIXED94232
[chromium] Impl scrolling crashes when the renderer's initialization failed
https://bugs.webkit.org/show_bug.cgi?id=94232
Summary [chromium] Impl scrolling crashes when the renderer's initialization failed
Dana Jansens
Reported 2012-08-16 11:18:21 PDT
[chromium] Impl scrolling crashes when the renderer's initialization failed
Attachments
Patch (5.33 KB, patch)
2012-08-16 11:21 PDT, Dana Jansens
no flags
Dana Jansens
Comment 1 2012-08-16 11:21:21 PDT
WebKit Review Bot
Comment 2 2012-08-16 12:35:42 PDT
Comment on attachment 158856 [details] Patch Clearing flags on attachment: 158856 Committed r125799: <http://trac.webkit.org/changeset/125799>
WebKit Review Bot
Comment 3 2012-08-16 12:35:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.