[chromium] Impl scrolling crashes when the renderer's initialization failed https://bugs.webkit.org/show_bug.cgi?id=94232

Reviewed by James Robinson.

Source/WebCore:

CCLayerTreeHostImpl::calculateRenderSurfaceLayerList should not be
called when there is no renderer present or it will crash.

Chromium bug: crbug.com/125482

Tests: CCLayerTreeHostImplTest.scrollWithoutRenderer

* platform/graphics/chromium/cc/CCLayerTreeHostImpl.cpp:
(WebCore::CCLayerTreeHostImpl::calculateRenderSurfaceLayerList):
(WebCore::CCLayerTreeHostImpl::ensureRenderSurfaceLayerList):

Source/WebKit/chromium:

Also updated the finishAllRenderingAfterContextLost to properly fail
renderer initialization.

* tests/CCLayerTreeHostImplTest.cpp:


Canonical link: https://commits.webkit.org/112054@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125799 268f45cc-cd09-0410-ab3c-d52691b4dbfc